tests/fail/BitwiseNot.java
package fail;

import java.lang.System;

public class BitwiseNot {
    public static void main(String[] args) {
        System.out.println(~'a');
    }
}
